# deer-flow

./: .env.example  AGENTS.md  API.md  ARCHITECTURE.md  CODE_MAP.md  DECISION_DRIFT.md  IMPACT_MAP.md  Makefile  PRODUCT.md  README.md  RETRO.md  TEST_STRATEGY.md  config.example.yaml  example.env  plan20260322rag.md  pyproject.toml  requirements.txt  task架构设计.md  工程如何沉淀.md  造数taskagent实施计划.md
backend/: CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  datagen_http_mock.postman_collection.json  db_dump.json  pyproject.toml
backend/app/gateway/: app.py  config.py  services.py
backend/app/gateway/routers/: __init__.py  nlp2sql.py
backend/app/gdp/: __init__.py  agent_logging.py  models.py  router.py  service.py  validation.py
backend/app/gdp/agent/: __init__.py  api.py  graph.py  observability.py  prompts.py  state.py
backend/app/gdp/agent/llm/: __init__.py  decision.py  events.py  model.py  prompts.py  schemas.py
backend/app/gdp/agent/mcp/: __init__.py  api.py  models.py  planner.py  registry.py  result_handler.py
backend/app/gdp/agent/middlewares/: __init__.py  business_guardrail.py  context_compression.py  error_handling.py  goal_guard.py  idempotency.py  interrupt.py  memory_context.py  node_audit.py  node_invoke.py  output_budget.py  progress_loop.py  recovery.py  runtime_context.py  skill_context.py  subtask.py  task_run_sync.py
backend/app/gdp/agent/nodes/: __init__.py  events.py  human_confirm.py  infra_config.py  intake.py  progress_reflection.py  scene_design.py  scene_execute.py  scene_fulfillment.py  source_config.py
backend/app/gdp/agent/skills/: __init__.py  api.py  models.py  registry.py
backend/app/gdp/agent/tools/: __init__.py  infra_config_tools.py  registry.py  scene_design_tools.py  scene_tools.py  source_config_tools.py  task_tools.py
backend/app/gdp/agent_runtime/: AGENTS.md  __init__.py  api.py  bindings.py  catalog.py  commands.py  decision.py  errors.py  evidence.py  execution.py  flow.py  llm.py  log_text.py  models.py  planner.py  refs.py  repository.py  runner.py  runtime_context.py  selection.py  service.py  store.py  transitions.py  variables.py  verdict.py
backend/app/gdp/agent_runtime/adapters/: __init__.py  catalog.py  config_writeback.py  scene.py
backend/app/gdp/agent_runtime/api/: __init__.py  dependencies.py  routes.py  schemas.py
backend/app/gdp/agent_runtime/application/: __init__.py  service.py
backend/app/gdp/agent_runtime/domain/: __init__.py  action.py  config_writeback.py  context.py  decision.py  evidence.py  factories.py  identifiers.py  requirement.py  safety.py  step.py  task.py  transitions.py  variable.py  verdict.py
backend/app/gdp/agent_runtime/evidence/: __init__.py  builder.py  extraction.py
backend/app/gdp/agent_runtime/execution/: __init__.py  failure_reason.py  ids.py  observation.py  runner.py
backend/app/gdp/agent_runtime/ledger/: __init__.py  memory.py  protocols.py  refs.py  snapshot.py  sql.py  timeline.py
backend/app/gdp/agent_runtime/ports/: __init__.py  config_writeback.py  idempotency.py
backend/app/gdp/agent_runtime/support/: __init__.py  contract_hash.py  runtime_context.py
backend/app/gdp/agent_runtime/verdict/: __init__.py  application.py  judging.py
backend/app/gdp/agent_runtime/workflows/: __init__.py  context_items.py  decision_records.py  execution_pipeline.py  reply_commands.py  reply_workflow.py  rollback_impact.py  rollback_plan.py  rollback_replay.py  scene_catalog.py  selection_ai.py  selection_gate.py  selection_policy.py  source_infra_discovery.py  start_workflow.py
backend/app/gdp/datagen/: redaction.py
backend/app/gdp/datagen/agent_catalog/: __init__.py  api.py  models.py  service.py
backend/app/gdp/datagen/agent_memory/: __init__.py  api.py  models.py  repository.py  service.py
backend/app/gdp/datagen/baseconfig/: api.py  models.py  repository.py  service.py
backend/app/gdp/datagen/httpsource/: api.py  models.py  repository.py  service.py
backend/app/gdp/datagen/runtime/: __init__.py
backend/app/gdp/datagen/scene/: api.py  (+4 more)
backend/app/gdp/engine/: __init__.py  condition_evaluator.py  context.py  executor.py  jsonpath_utils.py  models.py  variable_resolver.py
backend/app/gdp/persistence/: __init__.py  model.py  repository.py  schema.py
backend/docs/: API.md  ARCHITECTURE.md  AUTH_DESIGN.md  AUTH_TEST_DOCKER_GAP.md  AUTH_TEST_PLAN.md  AUTH_UPGRADE.md  CONFIGURATION.md  GUARDRAILS.md  STREAMING.md  TODO.md  rfc-create-deerflow-agent.md
backend/scripts/: datagen_http_mock_server.py  datagen_mock_sqlite.py  export_postman_collection.py  fix_http_source_vars.py  gdp_agent_mock_routes_extension.py  import_datagen_mock_sql_config.py  run_order_flow_scene.py  run_order_flow_scene_local.py  seed_create_order_flow_scene.py  seed_datagen_new_model_demo.py  seed_gdp_agent_test_scenes.py  seed_gdp_mock_data.py
backend/tests/: _agent_runtime_catalog_fakes.py  test_auth_middleware.py  test_client.py  test_client_e2e.py  test_codex_provider.py  test_dangling_tool_call_middleware.py  test_datagen_agent_catalog.py  test_datagen_base_config.py  test_datagen_http_mock_server_body_shapes.py  test_datagen_layering.py  test_datagen_scene_executor.py  test_datagen_scene_sql_execution.py  test_datagen_source_system_config.py  test_datagen_sql_dbapi_executors.py  test_datagen_sql_execution.py  test_datagen_task_api.py  test_datagen_task_service.py  test_datagen_task_subtask_api.py  test_datagen_task_subtask_service.py  test_doctor.py  test_gateway_command_resume.py  test_gateway_cors.py  test_gateway_services.py  test_gdp_agent_business_guardrail.py  test_gdp_agent_config_idempotency.py  test_gdp_agent_context_summary.py  test_gdp_agent_error_handling.py  test_gdp_agent_file_logging.py  test_gdp_agent_goal_guard.py  test_gdp_agent_graph.py  test_gdp_agent_infra_config_tools.py  test_gdp_agent_interrupt_middleware.py  test_gdp_agent_llm_decision.py  test_gdp_agent_llm_nodes.py  test_gdp_agent_mcp_registry.py  test_gdp_agent_memory_api.py  test_gdp_agent_memory_context.py  test_gdp_agent_node_audit.py  test_gdp_agent_observability.py  test_gdp_agent_progress_loop.py  (+83 more)
(+554 files in other folders)
